[2단계 - HTTP 서버 구현하기] 포스티(윤강민) 미션 제출합니다 (#929)
* feat: svg 타입 추가

* feat: octet-stream 타입 추가

* refactor: "/" URI ContentType 처리

* docs: step2 요구사항 작성

* test: 동시성, 스레드 학습

* refactor: Http 요청, 응답 객체 분리

* feat: 로그인 성공 실패 응답 처리 기능 구현

* feat: 회원가입, 로그인 POST 방식으로 변경

* test: 로그인 테스트

* docs: README 갱신

* feat: 로그인 성공 시 JSESSIONID 쿠키 추가

* feat: JSESSIONID 값으로 로그인 여부 체크

* test: 회원가입 GET, POST 테스트

* refactor: 코드 컨벤션 통일

* refactor: 404 응답 처리

* refactor: 코드 컨벤션

* refactor: 폼데이터 파싱을 요청에서 처리